# G-MaP-SE-fixed

./: .gitattributes  .gitignore  LICENSE  README.md  config_g_map_se.json  convert_onnx_to_burn.py  dataset.py  export_g_map_se_onnx.py  extract_embeddings.py  generate_gmms.py  inference.py  inference_g_map_se.py  inference_g_map_se_onnx.py  prepare_burn_models.py  pyproject.toml  requirements.txt  train.py  train_g_map_se.py  utils.py
burn_models/g_map_se/: g_map_se.bpk  g_map_se.rs
burn_models/g_map_se_b4/: g_map_se_b4.bpk  g_map_se_b4.rs
burn_models/voxceleb_ecapa512/: voxceleb_ecapa512.bpk  voxceleb_ecapa512.rs
cal_metrics/: cal_metrics_dns.py  cal_metrics_vb.py  compute_metrics.py
ckpt/: config.json
ecapa_models/: readme.txt
embeddings/voxceleb_ECAPA512/: readme.txt
gmms/: readme.txt
models/: conformer.py  discriminator.py  model.py  model_g_map_se.py  transformer.py
rust/: Cargo.toml  build.rs
rust-ort/: Cargo.toml
rust-ort/src/: main.rs
rust/src/: main.rs
