[project]
name = "g-map-se"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.23.2.1",
    "onnx>=1.22.0",
    "onnxruntime-gpu[cuda]>=1.26.0",
    "onnxscript>=0.7.0",
    "onnxslim>=0.1.94",
    "ruff>=0.15.17",
]
