[project]
name = "g-map-se"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "onnx>=1.22.0",
    "onnxruntime-gpu>=1.26.0",
    "onnxscript>=0.7.0",
    "onnxslim>=0.1.94",
    "pesq>=0.0.4",
    "ruff>=0.15.17",
    "torch>=2.12.1",
]
