[package]
name = "rust-ort"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
cuda = ["ort/cuda"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
hound = "3.5"
kaldi-native-fbank = "0.1.0"
ndarray = "0.17.2"
num-complex = "0.4"
ort = "2.0.0-rc.12"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
