[package]
name = "g-map-se-burn-infer"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[features]
default = ["wgpu"]
wgpu = ["burn/std", "burn/fusion", "burn/wgpu"]
cuda = ["burn/std", "burn/fusion", "burn/cuda"]

[dependencies]
anyhow = "1.0"
burn = { version = "0.21", default-features = false }
burn-store = "0.21"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
hound = "3.5"
num-complex = "0.4"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
